--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://gitsena.github.io/projeto-termovinho/",
   "name": "projeto-acquatec",
   "version": "1.0.0",
   "description": "",
