--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://gitsena.github.io/projeto-termovinho/",
-  "name": "projeto-acquatec",
+  "name": "projeto-termovinho",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
